--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /* navigation links */
@@ -77,12 +78,14 @@ h1, h2 {
     background: url(../images/hero-image.webp) no-repeat center center;
 
     /* animates zoom effect on loading page */
+
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
 /* creates the level of zoom for hero image */
+
 @keyframes hero-zoom {
     from {
         transform: scale(1);
@@ -110,4 +113,10 @@ h1, h2 {
     right: 150px;
 
     position: absolute;
+}
+
+/* club ethos */
+
+#club-ethos {
+    height: 600px;
 }
