--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,122 +1,152 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-    border: none;
+ * {
+     margin: 0;
+     padding: 0;
+     border: none;
+ }
 
-}
+ body {
+     font-family: Lato, sans-serif;
+     font-weight: 300;
+     color: #3a3a3a;
+ }
 
-body {
-    font-family: Lato, sans-serif;
-    font-weight: 300;
-    color: #3a3a3a;
-}
+ /* headings and logo */
 
-/* headings and logo */
+ h1, h2 {
+     font-family: Oswald, sans-serif;
+     text-transform: uppercase;
+     letter-spacing: 4px;
+     color: #252525;
+ }
 
-h1, h2 {
-    font-family: Oswald, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    color: #252525;
-}
+ #logo {
+     float: left;
+     font-size: 280%;
+     margin-left: 30px;
+ }
 
-#logo {
-    float: left;
-    font-size: 280%;
-    margin-left: 30px;
-}
+ /* navigation links */
 
-/* navigation links */
+ #menu {
+     font-size: 110%;
+     letter-spacing: 4px;
+ }
 
-#menu {
-    font-size: 110%;
-    letter-spacing: 4px;
-}
+ #menu, #logo {
+     line-height: 75px;
+ }
 
-#menu, #logo {
-    line-height: 75px;
-}
+ #menu li {
+     float: right;
+     list-style-type: none;
+     margin-right: 30px;
+ }
 
-#menu li {
-    float: right;
-    list-style-type: none;
-    margin-right: 30px; 
-}
+ #menu a {
+     text-decoration: none;
+     color: inherit;
+ }
 
-#menu a {
-    text-decoration: none;
-    color: inherit;
-}
+ #menu a:hover {
+     border-bottom: 1px solid #3a3a3a;
+ }
 
-#menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
-}
+ .active {
+     border-bottom: 1px solid #3a3a3a;
+ }
 
-.active {
-    border-bottom: 1px solid #3a3a3a;
-}
+ /* hero image and cover text */
 
-/* hero image */
+ #hero-outer {
+     height: 600px;
+     width: 100%;
+     overflow: hidden;
 
-#hero-outer {
-    height: 600px;
-    width: 100%;
-    overflow: hidden;
+     position: relative;
+ }
 
-    position: relative;
-}
+ #cover-text, #cover-text h2 {
+     color: #fff;
+ }
 
-#cover-text, #cover-text h2 {
-    color: #fff;
-}
+ #hero-image {
+     height: 600px;
+     width: 100%;
+     background: url('../images/hero-image.webp') no-repeat center center;
 
-#hero-image {  
-    height: 600px;
-    width: 100%;
-    background: url(../images/hero-image.webp) no-repeat center center;
+     /* animates zoom effect on loading page */
+     animation-name: hero-zoom;
+     animation-duration: 5s;
+     animation-fill-mode: forwards;
+ }
 
-    /* animates zoom effect on loading page */
+ /* creates the level of zoom for hero image */
+ @keyframes hero-zoom {
+     from{
+         transform: scale(1);
+     }
+     to{
+         transform: scale(1.1);
+     }
+ }
 
-    animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards;
-}
+ #cover-text {
+     font-size: 130%;
+     font-family: Oswald, sans-serif;
+     text-transform: uppercase;
+     letter-spacing: 4px;
 
-/* creates the level of zoom for hero image */
+     width: 300px;
+     height: 200px;
 
-@keyframes hero-zoom {
-    from {
-        transform: scale(1);
-    }
-    to {
-        transform: scale(1.1);
-    }
-}
+     padding-top: 40px;
+     padding-left: 10px;
 
-#cover-text {
-    font-size: 130%;
-    font-family: Oswald, sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 4px;
+     background-color: rgba(241, 109, 107, .7);
 
-    width: 300px;
-    height: 200px;
+     bottom: 30px;
+     right: 150px;
 
-    padding-top: 40px;
-    padding-left: 10px;
+     position: absolute;
+ }
 
-    background-color: rgba(241, 109, 107, .7);
+ /* club ethos */
 
-    bottom: 30px;
-    right: 150px;
+ #club-ethos {
+     height: 600px;
+ }
 
-    position: absolute;
-}
+ #left-about {
+     padding-top: 30px;
+     width: 33%;
+     float: left;
+ }
 
-/* club ethos */
+ #right-about {
+     padding-top: 30px;
+     width: 33%;
+     float: right;
+     background-color: silver;
+ }
 
-#club-ethos {
-    height: 600px;
-}
+ #center-about {
+     width: 33%;
+     margin: 0 auto;
+     background-color: green;
+ }
+
+ hr {
+     border-top: 1px solid #3a3a3a;
+     width: 100%;
+     margin: 5px 0;
+ }
+
+ .left-about-heading {
+     width: 60%;
+     float: right;
+     line-height: 20px;
+     clear: both;
+     margin-bottom: 50px;
+ } 
